# yast-packager

./: .cirrus.yml  .cvsignore  .gitignore  .rubocop.yml  .simplecov  .travis.yml  .yardopts  Dockerfile  Gemfile  MAINTAINER  Makefile.cvs  POTFILES  README.md  Rakefile  SUBDIRS  VERSION  configure.in.in  yast2-packager.spec.in
agent-package/src/: .cvsignore  Makefile.am  PackageAgent.cc  PackageAgent.h  PackageCalls.cc  PackageUpdateCalls.cc  Y2CCPackage.cc  Y2CCPackage.h  Y2PackageComponent.cc  Y2PackageComponent.h
agent-package/testsuite/: .cvsignore  Makefile.am  README  runag_package.cc
agent-package/testsuite/ag_package.test/: ag_package.exp
agent-package/testsuite/config/: unix.exp
agent-package/testsuite/tests/: Devel.sel  Dmz.sel  Games.sel  Gnome.sel  Kde-Desktop.sel  Kde.sel  LAMP.sel  Min.sel  Minimal+X11.sel  Minimal.sel  Multimed.sel  Multimedia.sel  Network.sel  P_AH.out  P_AH.ycp  P_AndExcl.out  P_AndExcl.ycp  P_AndExcl2.out  P_AndExcl2.ycp  P_Circle.out  P_Circle.ycp  P_CompYaST1_a.ycp  (+82 more)
agent-targetpkg/src/: .cvsignore  Makefile.am  RpmDb.cc  RpmDb.h  TargetpkgAgent.cc  TargetpkgAgent.h  TargetpkgAgentCalls.cc  Y2CCtargetpkgAgent.cc
agent-targetpkg/testsuite/: .cvsignore  Makefile.am  README  runag_targetpkg.cc
checkmedia/: CheckMedia.ycp  Makefile.am  checkmedia.ycp  ui.ycp
dirinstall/: DirInstall.ycp  MAINTAINER  Makefile.am  dirinstall.desktop  dirinstall.xml  dirinstall.ycp  dirinstall_options.ycp  dirinstall_options_proposal.ycp  inst_dirinstall.ycp  inst_dirinstall_finish.ycp  inst_dirinstall_options.ycp
spkg/: .cvsignore  MAINTAINER  Makefile.am  Makefile.cvs  README  RPMNAME  configure.in  y2c_spkg.spec.in  yast2-config-package-manager.spec.in
spkg/doc/: Makefile.am  y2c_spkg.html
spkg/package/: .cvsignore  y2c_spkg.changes  yast2-config-package-manager.changes
spkg/src/: Makefile.am  Require.ycp  inst_source.ycp  inst_source_dialogs.ycp  instintodir.ycp  menuentry_spkg.ycp  menuentry_sw_samba.ycp  menuentry_sw_single.y2cc  menuentry_sw_single.ycp  menuentry_sw_source.y2cc  menuentry_sw_source.ycp  require.ycp  sw_samba.ycp  sw_single.desktop  sw_single.y2cc  sw_single.ycp  sw_source.desktop  sw_source.y2cc
spkg/testsuite/: .cvsignore  Makefile.am
src/: Makefile.am
src/clients/: Makefile.am  add_inst_source_slptype.rb  add_inst_source_slptype.ycp  checkmedia.rb  checkmedia.ycp  dirinstall.ycp  dirinstall_options.ycp  dirinstall_options_proposal.ycp  do_not_show_again_editor.rb  do_not_show_again_editor.ycp  inst_check_memsize.rb  inst_check_memsize.ycp  inst_checkmedia.rb  inst_checkmedia.ycp  inst_custom_packages.rb  inst_custom_packages.ycp  inst_desktop.rb  inst_desktop.ycp  inst_desktop_new.ycp  inst_dirinstall.ycp  inst_dirinstall_finish.ycp  inst_kickoff.rb  inst_kickoff.ycp  inst_media.rb  inst_media.ycp  inst_mediacopy.rb  inst_mediacopy.ycp  inst_packages.rb  inst_packages.ycp  inst_product_license.rb  inst_product_upgrade_license.rb  inst_product_workflow.rb  inst_productsources.rb  inst_productsources.ycp  inst_repo.ycp  inst_repositories_initialization.rb  inst_rpmcopy.rb  inst_rpmcopy.ycp  inst_selections.ycp  inst_source.ycp  (+24 more)
src/config/: Makefile.am  checkmedia.desktop  dirinstall.desktop  dirinstall.xml  productsources.desktop  sw_single.desktop  sw_source.desktop  webpin.desktop  xen-dirinstall.desktop  xen-dirinstall.xml
src/desktop/: checkmedia.desktop  org.opensuse.yast.CheckMedia.desktop  org.opensuse.yast.SWSingle.desktop  org.opensuse.yast.SWSource.desktop  sw_single.desktop  sw_source.desktop
src/include/: Makefile.am  inst_source_dialogs.ycp  key_manager_dialogs.ycp  load_release_notes.ycp  repositories_include.ycp  storage_include.ycp
src/lib/: language_tag.rb
src/modules/: AddOnProduct.rb  AddOnProduct.ycp  CheckMedia.rb  CheckMedia.ycp  DefaultDesktop.rb  DefaultDesktop.ycp  DirInstall.ycp  DontShowAgain.ycp  InstShowInfo.rb  InstShowInfo.ycp  InstURL.rb  InstURL.ycp  KeyManager.rb  KeyManager.ycp  Makefile.am  Mtab.rb  OneClickInstallStandard.pm  OneClickInstallStandard.rb  OneClickInstallStandard.ycp  PackageCallbacks.ycp  PackageInstallation.rb  PackageInstallation.ycp  PackageSelectionIO.ycp  PackageSlideShow.rb  PackageSlideShow.ycp  Packages.rb  Packages.ycp  PackagesProposal.ycp  PackagesUI.ycp  ProductLicense.rb  ProductLicense.ycp  SignatureCheckCallbacks.ycp  SignatureCheckDialogs.ycp  SlideShow.ycp  SlideShowCallbacks.rb  SlideShowCallbacks.ycp  SourceDialogs.rb  SourceDialogs.ycp  SourceManager.rb  SourceManager.ycp  (+7 more)
src/servers_non_y2/: ag_zypp_repos
test/: Makefile.am  addon_product_test.rb  addon_selector_test.rb  default_desktop_test.rb  inst_productsources_test.rb  inst_show_info_test.rb  inst_url_test.rb  installation_data_test.rb  installation_medium_test.rb  known_repositories_test.rb  medium_type_test.rb  mtab_test.rb  one_click_install_standard_test.rb  package_installation_test.rb  package_slide_show_test.rb  packages_test.rb  pkg_finish_test.rb  product_factory.rb  product_license_test.rb  product_location_test.rb  product_patterns_test.rb  product_reader_test.rb  product_sorter_test.rb  product_test.rb  repositories_client_test.rb  repositories_include_test.rb  repository_test.rb  resolvable_test.rb  self_update_addon_filter_test.rb  self_update_addon_repo_test.rb  selfupdate_addon_filter_test.rb  selfupdate_addon_repo_test.rb  slide_show_callabacks_test.rb  slide_show_callbacks_test.rb  source_dialogs_test.rb  space_calculation_test.rb  system_packages_test.rb  test_helper.rb  zypp_conf_test.rb
test/data/: README.BETA  _openSUSE_Leap_15.0_Default.xml  add_on_products_cd.xml  luks_target_map.yml  nfs_target_map.yml  org_mtab  patched_mtab  release-notes-dummy.rpm  run_df.yml  xfs_devicegraph.yml  xfs_target_map.yml
test/lib/: control_product_spec.rb  info_file_test.rb  libzypp_product_spec_test.rb  package_test.rb  pkg_helpers_test.rb  product_spec_reader_test.rb  product_spec_test.rb  product_upgrade_test.rb  release_notes_reader_test.rb  release_notes_rpm_reader_test.rb  release_notes_test.rb  release_notes_url_reader_test.rb  repo_product_spec_test.rb
(+371 files in other folders)
