#
# Makefile.am for tune/idedma/src
#

yncludedir = @yncludedir@/checkmedia

client_DATA =			\
	checkmedia.ycp		\
	inst_checkmedia.ycp

ynclude_DATA =			\
	ui.ycp


module_DATA =			\
	CheckMedia.ycp

desktop_DATA =			\
	checkmedia.desktop


EXTRA_DIST = $(client_DATA) $(ynclude_DATA) $(module_DATA) $(desktop_DATA)

include $(top_srcdir)/Makefile.am.common
