#
# Makefile.am for packager/dirinstall
#

module_DATA =				\
	DirInstall.ycp

client_DATA = \
	dirinstall.ycp			\
	dirinstall_options_proposal.ycp	\
	inst_dirinstall_options.ycp		\
	inst_dirinstall.ycp

desktop_DATA = dirinstall.desktop

EXTRA_DIST = $(module_DATA) $(client_DATA) $(desktop_DATA)

include $(top_srcdir)/Makefile.am.common
