dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/Makefile.am) dnl a source file from your sub dir, but acinclude.m4 does the job
AC_CANONICAL_SYSTEM
AC_ARG_PROGRAM

VERSION=`cat VERSION`
RPMNAME=`cat RPMNAME`
MAINTAINER=`cat MAINTAINER`
DOCDIR=/usr/share/doc/packages/yast2
YAST2DIR=/usr/lib/YaST2

prefix=$YAST2DIR

AM_INIT_AUTOMAKE($RPMNAME, $VERSION) dnl searches for some needed programs

AC_SUBST(VERSION)
AC_SUBST(RPMNAME)
AC_SUBST(MAINTAINER)
AC_SUBST(DOCDIR)
AC_SUBST(YAST2DIR)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl Allow conditionals in .am files
AM_CONDITIONAL(ISIX86, [case `uname -m` in i*86) true;; *) false;; esac])
AM_CONDITIONAL(ISALPHA, test `uname -m` = alpha)
AM_CONDITIONAL(ISSPARC, test `uname -m` = sparc)
AM_CONDITIONAL(ISPPC, test `uname -m` = ppc)

AC_OUTPUT(Makefile
	y2c_spkg.spec
	src/Makefile
	doc/Makefile)

mv $RPMNAME.spec package
