TESTS = \
  addon_product_test.rb \
  product_patterns_test.rb \
  package_installation_test.rb \
  packages_test.rb \
  pkg_finish_test.rb \
  source_dialogs_test.rb \
  space_calculation_test.rb

TEST_EXTENSIONS = .rb
RB_LOG_COMPILER = rspec
VERBOSE = 1
EXTRA_DIST = $(TESTS) product_factory.rb test_helper.rb
