# Makefile.am for packager/spkg/src

client_DATA = 			\
	sw_single.ycp		\
	inst_source.ycp

config_DATA =			\
	sw_single.y2cc		\
	sw_source.y2cc

desktop_DATA =			\
	sw_single.desktop	\
	sw_source.desktop

ynclude_DATA = inst_source_dialogs.ycp

module_DATA =

EXTRA_DIST = $(client_DATA) $(config_DATA) $(ynclude_DATA) $(module_DATA) $(desktop_DATA)

include $(top_srcdir)/Makefile.am.common
